--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,3 +16,7 @@ spring:
     console:
       enabled: true
       path: /h2-console
+server:
+  error:
+    include-stacktrace: never
+    include-message: always
